--- a/package.json
+++ b/package.json
@@ -13,27 +13,27 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-paper": "^5.11.1",
-    "react-native-safe-area-context": "^4.7.4",
-    "react-native-vector-icons": "^10.0.2"
+    "react-native-paper": "5.11.1",
+    "react-native-safe-area-context": "4.7.4",
+    "react-native-vector-icons": "10.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/eslint-config": "^0.72.2",
-    "@react-native/metro-config": "^0.72.11",
-    "@testing-library/jest-native": "^5.4.3",
-    "@testing-library/react-native": "^12.3.2",
-    "@tsconfig/react-native": "^3.0.0",
-    "@types/jest": "^29.5.8",
-    "@types/react": "^18.0.24",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.2.1",
-    "eslint": "^8.19.0",
-    "jest": "^29.2.1",
+    "@babel/core": "7.8.0",
+    "@babel/preset-env": "7.8.0",
+    "@babel/runtime": "7.8.0",
+    "@react-native/eslint-config": "0.72.2",
+    "@react-native/metro-config": "0.72.11",
+    "@testing-library/jest-native": "5.4.3",
+    "@testing-library/react-native": "12.3.2",
+    "@tsconfig/react-native": "3.0.0",
+    "@types/jest": "29.5.8",
+    "@types/react": "18.0.24",
+    "@types/react-test-renderer": "18.0.0",
+    "babel-jest": "29.2.1",
+    "eslint": "8.19.0",
+    "jest": "29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
-    "prettier": "^2.4.1",
+    "prettier": "2.4.1",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
