--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "tdd": "npm test -- --watch"
   },
   "dependencies": {
+    "@react-navigation/core": "^6.4.16",
+    "@react-navigation/native": "6.1.9",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-paper": "5.11.1",
+    "react-native-paper": "5.12.3",
     "react-native-safe-area-context": "4.7.4",
+    "react-native-screens": "3.29.0",
     "react-native-vector-icons": "10.0.2"
   },
   "devDependencies": {
